# llm-evaluations

./: .gitignore  PHI3_SETUP_GUIDE.md  README.md  phi3_evaluation_results.json  pyproject.toml  run_examples.py  test_phi3_setup.py
examples/: builtin_evaluators.py  comprehensive_evaluation_suite.py  custom_evaluators.py  langsmith_integration.py  ollama_client.py  phi3_ollama_test.py  phi3_real_test.py  profanity_evaluator.py
