[tool.poetry]
name = "open-llm-eval"
version = "0.1.0"
description = "LLM evaluation examples using OpenEvals"
authors = ["anjiboddupally <boddupally.anji@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13"
requests = ">=2.32.3,<3.0.0"
openevals = ">=0.1.0,<0.2.0"
langsmith = ">=0.1.0,<1.0.0"
pytest = ">=7.0.0,<8.0.0"
openai = ">=1.0.0,<2.0.0"
langchain-ollama = "^0.3.8"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
